- PR#6649, GPR#222: accept (int_of_string "+3")
  (Christopher McAlpine)
- PR#6645, GPR#174: Guarantee that Set.add, Set.remove, Set.filter
  return the original set if no change is required (Alain Frisch,
  Mohamed Iguernelala)
- PR#6694, PR#6695: deprecate functions using ISO-8859-1 character set
  in Char, Bytes, String and provide alternatives using US-ASCII.
  (Peter Zotov)
- GPR#201: generalize types of Printf.{ifprintf,ikfprintf}
  (Maxence Guesdon)
- GPR#216: add the missing POSIX.1-2001 signals in Sys
  (Guillaume Bury)
- GPR#239: remove type-unsafe code from Stream
  (Pierre Chambart, review by Gabriel Scherer and Jeremy Yallop)
- GPR#250: Check for negative start element in Array.sub
  (report and fix by Jeremy Yallop)

Type system:
- PR#5545: Type annotations on methods cannot control the choice of abbreviation
* PR#6465: allow incremental weakening of module aliases (Jacques Garrigue).
  This is done by adding equations to submodules when expanding aliases.
  In theory this may be incompatible is some corner cases defining a module
  type through inference, but no breakage known on published code.
- PR#6593: Functor application in tests/basic-modules fails after commit 15405

Toplevel and debugger:
- PR#6468: toplevel now supports backtraces if invoked with OCAMLRUNPARAM=b
  (Peter Zotov and Jake Donham,
   review by Gabriel Scherer and Jacques-Henri Jourdan)

Other libraries:
- PR#6896: serious reimplementation of Big_int.float_of_big_int and
  Ratio.float_of_ratio, ensuring that the result is correctly rounded.
  (Xavier Leroy)
- PR#7013: spurious wake-up in the Event module
  (Xavier Leroy)

OCamlbuild:
- PR#6794, PR#6809: pass package-specific include flags when building C files
  (Jérémie Dimino, request by Peter Zotov)
- GPR#208: add "asm" tag to ocamlbuild to enable flag -S
  (ygrek)
- Changed OCamlbuild's license to LGPLv2 with static linking exception.
- GPR#219: speedup target-already-built builds
  (ygrek)

Bug fixes: